Disable JVM C2 compiler for Alpine tests
Since Alpine tests spawn a new JVM for every test class, making JVMs very short-lived, the C2 compiler doesn't make sense and only causes overhead.

https://mostlynerdless.de/blog/2023/09/25/c2-might-slow-down-your-builds/
Signed-off-by: nscuro <nscuro@protonmail.com>