@@ -438,6 +438,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                        @{argLine}
+                        -XX:+TieredCompilation
+                        -XX:TieredStopAtLevel=1
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                     <!-- Some Alpine tests leave the JVM behind in a dirty state. -->
                     <reuseForks>false</reuseForks>
                 </configuration>
